# zenspace

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMAND_USAGE.md  CUSTOMIZE_TEMPLATE.md  Gemfile  LICENSE.txt  README.md  README2.md  Rakefile  Steepfile  test.db  zen.gemspec
config/: settings.yml
exe/: zen
rust/: Cargo.toml
rust/config/: config.toml
rust/src/: cli.rs  config.rs  errors.rs  main.rs  util.rs
rust/src/cmd/: cleanup_command.rs  mod.rs  starter_command.rs  wps_command.rs
rust/src/infra/: mod.rs  starter_repository.rs
rust/src/model/: mod.rs  starter.rs  starter_model.rs
rust/src/service/: cleanup_service.rs  mod.rs  starter_service.rs  wps_service.rs
rust/templates/starter/ddd_init/__app__/: .zen
rust/templates/starter/ddd_init/__app__/__app__-application/: pom.xml
rust/templates/starter/ddd_init/__app__/__app__-dependencies/: pom.xml
rust/templates/starter/ddd_init/__app__/__app__-domain/: pom.xml
rust/templates/starter/ddd_spec/: dao.java.tera  entity.java.tera  mapper.xml.tera  repository.java.tera  repository_impl.java.tera  service.java.tera  service_impl.java.tera
rust/templates/starter/mvc_init/__app__/__app__-bootstrap/: pom.xml
rust/templates/starter/mvc_init/__app__/__app__-common/: pom.xml
rust/templates/starter/mvc_init/__app__/__app__-domain/: pom.xml
rust/templates/starter/mvc_spec/: entity.java.tera  entity.java.tpl  entity_convert.java.tera  model.java.tera  service.java.tera  service_impl.java.tera  vo.java.tera
rust/tests/: common.rs  main.rs
rust/tests/wps/: mod.rs  unixtime_test.rs
(+168 files in other folders)
