[package]
name = "zen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
uuid = { version = "1.16.0", features = ["v3", "v5", "v7"] }
rand = "0.9.2"
