[package]
name = "zen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env", "string"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
uuid = { version = "1.16.0", features = ["v3", "v5", "v7"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tera = "1.20.0"
include_dir = { version = "0.7.4", features = ["glob", "metadata"] }
config = "0.15.15"
anyhow = "1.0.99"
getset = "0.1.6"
serde_derive = "1.0.221"
tempfile = "3.22.0"
home = "0.5.11"
chrono = { version = "0.4.42", features = ["serde"] }
heck = "0.5.0"
typed-builder = "0.22.0"
strum = { version = "0.27.2", features = ["derive","phf"] }
sqlx = { version = "0.8.6", features = [
    "bigdecimal",
    "chrono",
    "mysql",
    "runtime-tokio",
] }
tokio = { version = "1.47.1", features = ["full"] }
fs_extra = "1.3.0"
glob = "0.3.3"
